add secret key for workflow

--- a/.github/workflows/test-diff-checker.yml
+++ b/.github/workflows/test-diff-checker.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Test & publish code coverage
         uses: paambaati/codeclimate-action@v5.0.0
         env:
-          CC_TEST_REPORTER_ID: 46fb2129de7b63ad675f59c18793db6a369f59eecb52ae61605097b8bfee1bab
+          CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
         with:
           coverageCommand: poetry run pytest --cov=gendiff --cov-report xml
           debug: true
