--- a/.github/workflows/test-diff-checker.yml
+++ b/.github/workflows/test-diff-checker.yml
@@ -28,5 +28,5 @@ jobs:
         env:
           CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
         with:
-          coverageCommand: poetry run pytest --cov=gendiff --cov-report xml
+          coverageCommand: make test-coverage
           debug: true
