--- a/.github/workflows/test-diff-checker.yml
+++ b/.github/workflows/test-diff-checker.yml
@@ -23,6 +23,9 @@ jobs:
           pip install poetry
           poetry install
 
+      - name: Run linter
+        run: make lint
+
       - name: Run tests
         run: make test
 
